--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
     <header>
         <img src="img/logo.svg" alt="errore">
     </header>
+    <main>
+        <h1>Internet deve essere al servio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        <p class="autore">Scritto da <span>The Booleaner</span> <br>
+            il 10/10/2020
+        </p>
+        
+    </main>
 </body>
 </html>
