--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
         <p class="autore">Scritto da <span>The Booleaner</span> <br>
             il 10/10/2020
         </p>
-        
+        <img class="img1" src="img\tim-1.jpg" alt="errore">
+        <img class="img2" src="img\tim-2.jpg" alt="errore">
+        <p>
+            1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+            2nd Photo: Wikimedia, by Paul Clarke
+        </p>
+
+        <p>
+            
+        </p>
     </main>
 </body>
 </html>
