--- a/index.html
+++ b/index.html
@@ -23,9 +23,90 @@
             2nd Photo: Wikimedia, by Paul Clarke
         </p>
 
-        <p>
-            
+        <p class="lorem">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Autem, quaerat tenetur nisi eveniet earum ea facere minus 
+            commodi quasi! Provident quae numquam dignissimos, 
+            ea facilis earum mollitia dolorem quis. Beatae!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <mark>>Laboriosam dolorem nam doloremque, exercitationem similique
+            obcaecati maiores sapiente vel eius, sunt quidem.</mark> 
+            Reprehenderit molestias ipsam, hic sit fugiat incidunt architecto quas?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quae fuga, velit
+            consectetur exercitationem molestiae dolores non rerum quo consequatur illum
+            delectus repellat, repellendus ducimus distinctio quod cum nemo minima.
+        </p>
+
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas obcaecati impedit deserunt reiciendis cum a sint et illo, optio suscipit. Expedita voluptatum unde vero quasi animi ad excepturi.</li>
+            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus debitis sint quas quibusdam inventore ducimus unde natus numquam dolor sapiente odio modi quae, non totam aspernatur dignissimos eos.</li>
+            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic ducimus architecto dolorum voluptatem ex nihil exercitationem sunt maiores ea, sed perspiciatis blanditiis voluptatum laboriosam, impedit tenetur..</li>
+        </ul>
+
+        <table>
+            <thead>
+                <tr class="tr1">
+                    <th class="sinistra">Lorem ipsum dolor</th>
+                    <th class="centro">Lorem ipsum dolor</th>
+                    <th class="destra">Lorem ipsum dolor</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="tr2">
+                    <td class="sinistra">Lorem ipsum dolor</td>
+                    <td class="centro">Lorem ipsum dolor</td>
+                    <td class="destra">
+                        <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam omnis adipisci tenetur quo <br>
+                        voluptatibus quasi aliquid eaque commodi blanditiis dolorum porro, facere <br>
+                        aspernatur, ex impedit. Repellendus at ex molestias ad! <br>
+                        </p>
+                    </td>
+                </tr>
+                <tr class="tr3">
+                    <td class="sinistra">Lorem ipsum dolor</td>
+                    <td class="centro">Lorem ipsum dolor</td>
+                    <td class="destra">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam omnis adipisci tenetur quo <br>
+                            voluptatibus quasi aliquid eaque commodi blanditiis dolorum porro, facere <br>
+                            aspernatur, ex impedit. Repellendus at ex molestias ad! <br>
+                        </p>
+                    </td>
+                </tr>
+                <tr class="tr4">
+                    <td class="sinistra">Lorem ipsum dolor</td>
+                    <td class="centro">Lorem ipsum dolor</td>
+                    <td class="destra">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam omnis adipisci tenetur quo <br>
+                            voluptatibus quasi aliquid eaque commodi blanditiis dolorum porro, facere <br>
+                            aspernatur, ex impedit. Repellendus at ex molestias ad! <br>
+                        </p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <p class="lorem2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Laudantium nulla exercitationem quia saepe molestiae iure
+            fugit corrupti sed animi. Enim quaerat possimus esse
+            dignissimos iste magnam molestias eaque sint aperiam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Laudantium nulla exercitationem quia saepe molestiae iure
+            fugit corrupti sed animi. Enim quaerat possimus esse
+            dignissimos iste magnam molestias eaque sint aperiam.
+            <mark>Laudantium nulla exercitationem quia saepe molestiae iure
+            fugit corrupti sed animi.</mark> Enim quaerat possimus esse
+            dignissimos iste magnam molestias eaque sint aperiam.
         </p>
     </main>
+
+    <footer>
+        <span>Potrebbero interessarti</span> <br>
+        <img src="img\monitor.jpg" alt="errore"> <br> <br>
+        <img src="img\graph.jpg" alt="errore">
+    </footer>
 </body>
 </html>
